replaced basic nav in burger with additional to avoid z-index problem

--- a/styles/css/atomic.css
+++ b/styles/css/atomic.css
@@ -2,6 +2,10 @@
   display: none !important;
 }
 
+.invisible {
+  opacity: 0;
+}
+
 .unselectable {
   user-select: none;
 }
