--- a/styles/css/components.css
+++ b/styles/css/components.css
@@ -12,13 +12,58 @@
 }
 
 .popupWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #323264cc;
   inset: 0;
   position: fixed;
   width: 100%;
-  height: 120%;
-  z-index: 8;
+  height: 100%;
+  z-index: 9;
 }
+
+/* ----------------------------------------- */
+.popupWrapper .burgerNav {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 15px;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  margin-left: 8px;
+  margin-right: 8px;
+  padding: 12px;
+  background-color: #fff;
+  border-radius: 12px;
+  z-index: 10;
+}
+.popupWrapper .burgerNav .closeBtn {
+  display: block;
+  align-self: flex-end;
+  cursor: pointer;
+}
+.popupWrapper .burgerNav .active {
+  color: var(--accent);
+}
+.popupWrapper .burgerNav .navItem {
+  background-color: var(--grey-bg);
+  padding-top: 7px;
+  padding-bottom: 7px;
+  border-radius: 12px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: normal;
+  text-align: center;
+}
+.popupWrapper .burgerNav a {
+  color: var(--active-regular);
+}
+.popupWrapper .burgerNav a:active {
+  background-color: var(--grey-separator);
+}
+/* ----------------------------------------- */
 
 .serviceCard {
   color: #fff;
