--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -412,8 +412,16 @@ select {
     flex-direction: row;
     overflow-x: auto;
     max-width: calc(100vw - var(--section-padding-y) * 2);
-    /* transform: translateX(60px); */
   }
+
+  /* .pills .pillsTab {
+    position: absolute;
+    top: -50px;
+    flex-direction: row;
+    overflow-x: auto;
+    max-width: calc(100vw);
+    padding-right: calc(var(--section-padding-y) * 2);
+  } */
 
   .pills .linearSeparator.vertical {
     display: none;
