--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -217,7 +217,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 10; //!-------------------//
+    z-index: 2; //!-------------------//
     .container {
       .logoBlock {
         .logo {
